[workspace]
resolver = "2"
members = [
	# TODO: uncomment and fix step by step
	#"bindings/core",
	#"bindings/nodejs",
	#"bindings/python",
	#"bindings/wasm",
	"cli",
	"sdk",
]

# Necessary to get coverage to work as for some reason using a custom profile breaks it
[profile.test]
debug = 0
incremental = false

[profile.ci]
inherits = "dev"
debug = 0
incremental = false

[profile.production]
codegen-units = 1
inherits = "release"
lto = true
strip = "symbols"
