[workspace]
resolver = "2"
members = [
	"bindings/core",
	"bindings/nodejs",
	# TODO: issue #1423
	#"bindings/python",
	# TODO: issue #1425
	#"bindings/wasm",
	"cli",
	"sdk",
]

# Necessary to get coverage to work as for some reason using a custom profile breaks it
[profile.test]
debug = 0
incremental = false

[profile.ci]
inherits = "dev"
debug = 0
incremental = false

[profile.production]
codegen-units = 1
inherits = "release"
lto = true
strip = "symbols"
