[package]
name = "cli-wallet"
version = "1.0.0-rc.2"
authors = [ "IOTA Stiftung" ]
edition = "2021"
homepage = "https://iota.org"
description = "Command line interface wallet application based on the IOTA SDK"
license = "Apache-2.0"

[[bin]]
name = "wallet"
path = "src/main.rs"

[dependencies]
iota-sdk = { path = "../sdk", default-features = false, features = [ "wallet", "tls", "storage", "rocksdb", "stronghold", "participation" ] }

chrono = { version = "0.4.24", default-features = false, features = [ "std" ] }
clap = { version = "4.2.0", default-features = false, features = [ "std", "color", "help", "usage", "error-context", "suggestions", "derive", "env" ] }
colored = { version = "2.0.0", default-features = false }
dialoguer = { version = "0.10.3", default-features = false, features = [ "history", "password", "completion" ] }
dotenvy = { version = "0.15.7", default-features = false }
fern-logger = { version = "0.5.0", default-features = false }
humantime = { version = "2.1.0", default-features = false }
log = { version = "0.4.17", default-features = false }
prefix-hex = { version = "0.7.0", default-features = false, features = [ "std" ] }
serde_json = { version = "1.0.95", default-features = false }
thiserror = { version = "1.0.40", default-features = false }
tokio = { version = "1.27.0", default-features = false, features = [ "fs" ] }
