[package]
name = "cli-wallet"
version = "1.3.0"
authors = ["IOTA Stiftung"]
edition = "2021"
homepage = "https://iota.org"
repository = "https://github.com/iotaledger/iota-sdk"
description = "Command line interface wallet application based on the IOTA SDK"
license = "Apache-2.0"
keywords = ["iota", "tangle", "sdk", "cli", "wallet"]
categories = ["cryptography::cryptocurrencies"]

[[bin]]
name = "wallet"
path = "src/main.rs"

[dependencies]
iota-sdk = { path = "../sdk", default-features = false, features = [
    "wallet",
    "tls",
    "storage",
    "rocksdb",
    "stronghold",
    "participation",
    "ledger_nano",
] }

chrono = { version = "0.4.37", default-features = false, features = ["std"] }
clap = { version = "4.5.4", default-features = false, features = [
    "std",
    "color",
    "help",
    "usage",
    "error-context",
    "suggestions",
    "derive",
    "env",
] }
colored = { version = "2.1.0", default-features = false }
dialoguer = { version = "0.11.0", default-features = false, features = [
    "password",
] }
dotenvy = { version = "0.15.7", default-features = false }
eyre = { version = "0.6.12", default-features = false, features = [
    "auto-install",
] }
fern-logger = { version = "0.5.0", default-features = false }
log = { version = "0.4.21", default-features = false }
prefix-hex = { version = "0.7.1", default-features = false, features = ["std"] }
rustyline = { version = "14.0.0", features = ["derive"] }
serde_json = { version = "1.0.115", default-features = false }
strum = { version = "0.26.2", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58", default-features = false }
tokio = { version = "1.36.0", default-features = false, features = ["fs"] }
zeroize = { version = "1.7.0", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", default-features = false }
windows-acl = { version = "0.3.0", default-features = false }
