[package]
name = "iota-sdk"
version = "0.1.0"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "The IOTA SDK provides developers with a seamless experience to develop on IOTA by providing account abstractions and clients to interact with node APIs."
documentation = "https://wiki.iota.org"
homepage = "https://www.iota.org/"
repository = "https://github.com/iotaledger/iota-sdk"
readme = "README.md"
license = "Apache-2.0"
keywords = [ "iota", "tangle", "sdk", "client", "wallet" ]
categories = [ "cryptography::cryptocurrencies" ]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs" ]

[dependencies]
async-trait = { version = "0.1.67", default-features = false, optional = true }
regex = { version = "1.7.1", default-features = false, features = [ "std", "unicode-perl" ], optional = true }
rumqttc = { version = "0.20.0", default-features = false, features = [ "websocket" ], optional = true }
once_cell = { version = "1.17.1", default-features = false, features = [ "std" ], optional = true }
iota_stronghold = { version = "1.0.5", default-features = false, features = [ "std" ], optional = true }
iota-ledger-nano = { version = "1.0.0-alpha.2", default-features = false, optional = true }
backtrace = { version = "0.3.67", default-features = false, features = [ "std" ], optional = true }
fern-logger = { version = "0.5.0", default-features = false, optional = true }

prefix-hex = { version = "0.7.0", default-features = false, features = [ "std", "primitive-types" ] }
# tokio = { version = "1.26.0", default-features = false, features = [ "sync", "rt", "time" ] }
tokio = { version = "1.26.0", default-features = false, features = [ "macros", "rt-multi-thread", "time", "sync" ] } # optional for message interface
instant = { version = "0.1.12", default-features = false, features = [ "wasm-bindgen" ] }
serde = { version = "1.0.152", default-features = false, features = [ "derive" ], optional = true }
thiserror = { version = "1.0.39", default-features = false }
log = { version = "0.4.17", default-features = false }
num_cpus = { version = "1.15.0", default-features = false }
hashbrown = { version = "0.13.2", default-features = false, features = [ "ahash", "inline-more", "serde" ] }
derive_builder = { version = "0.12.0", default-features = false, features = [ "std" ]}
serde_json = { version = "1.0.94", default-features = false, features = [ "std" ], optional = true }
url = { version = "2.3.1", default-features = false, features = [ "serde" ] }
primitive-types = { version = "0.12.1", default-features = false, features = [ "serde" ] }
futures = { version = "0.3.26", default-features = false, features = [ "thread-pool" ] }
reqwest = { version = "0.11.14", default-features = false, features = [ "json" ] }
zeroize = { version = "1.5.7", default-features = false, features = [ "zeroize_derive" ] }
iota-crypto = { version = "0.15.3", default-features = false, features = [ "std", "chacha", "digest", "curl-p", "blake2b", "ed25519", "random", "slip10", "bip39", "bip39-en", "ternary_encoding" ] }
getset = { version = "0.1.2", default-features = false, optional = true }
serde_repr = { version = "0.1.11", default-features = false, optional = true }
rand = { version = "0.8.5", default-features = false, features = [ "min_const_gen", "std_rng" ], optional = true }
serde-big-array = { version = "0.5.1", default-features = false, optional = true }
packable = { version = "0.7.0", default-features = false, features = [ "serde", "primitive-types", "std" ] }
derive_more = { version = "0.99.17", default-features = false, features = [ "from", "as_ref", "deref", "deref_mut" ] }
bytemuck = { version = "1.13.1", default-features = false }
hex = { version = "0.4.3", default-features = false, features = [ "alloc" ] }
bech32 = { version = "0.9.1", default-features = false }
bitflags = { version = "1.3.2", default-features = false }
iterator-sorted = { version = "0.1.0", default-features = false }

[dev-dependencies]
iota-sdk = { version = "0.1.0", path = ".", default-features = false, features = [ "rand" ] }
dotenv = { version = "0.15.0", default-features = false }
fern-logger = { version = "0.5.0", default-features = false }

[features]
client = [ "async-trait" ]
pow = [ ]
wallet = [ ]
storage = [ "async-trait" ]
mqtt = [ "regex", "rumqttc", "once_cell" ]
stronghold = [ "iota_stronghold" ]
events = [ ]
ledger_nano = [ "iota-ledger-nano" ]
participation = [ "storage" ]
message_interface = [ "backtrace", "fern-logger" ]

default = [ "api", "block", "std" ]
api = [ "block", "dto", "getset", "serde_repr" ]
block = [  ]
dto = [ "serde", "dep:serde_json" ]
rand = [ "dep:rand", "std" ]
serde = [ "dep:serde", "serde-big-array" ]
std = [  ]

# Block examples

[[example]]
name = "block_no_payload"
path = "examples/client/block/00_block_no_payload.rs"

[[example]]
name = "block_confirmation_time"
path = "examples/client/block/01_block_confirmation_time.rs"

[[example]]
name = "block_custom_parents"
path = "examples/client/block/02_block_custom_parents.rs"

[[example]]
name = "block_custom_payload"
path = "examples/client/block/03_block_custom_payload.rs"

[[example]]
name = "block_tagged_data"
path = "examples/client/block/04_block_tagged_data.rs"

[[example]]
name = "custom_inputs"
path = "examples/client/block/custom_inputs.rs"

[[example]]
name = "output"
path = "examples/client/block/output.rs"

[[example]]
name = "transaction"
path = "examples/client/block/transaction.rs"

# Node API core examples

[[example]]
name = "node_api_core_get_health"
path = "examples/client/node_api_core/00_get_health.rs"

[[example]]
name = "node_api_core_get_routes"
path = "examples/client/node_api_core/01_get_routes.rs"

[[example]]
name = "node_api_core_get_info"
path = "examples/client/node_api_core/02_get_info.rs"

[[example]]
name = "node_api_core_get_tips"
path = "examples/client/node_api_core/03_get_tips.rs"

[[example]]
name = "node_api_core_post_block"
path = "examples/client/node_api_core/04_post_block.rs"

[[example]]
name = "node_api_core_post_block_raw"
path = "examples/client/node_api_core/05_post_block_raw.rs"

[[example]]
name = "node_api_core_get_block"
path = "examples/client/node_api_core/06_get_block.rs"

[[example]]
name = "node_api_core_get_block_raw"
path = "examples/client/node_api_core/07_get_block_raw.rs"

[[example]]
name = "node_api_core_get_block_metadata"
path = "examples/client/node_api_core/08_get_block_metadata.rs"

[[example]]
name = "node_api_core_get_output"
path = "examples/client/node_api_core/09_get_output.rs"

[[example]]
name = "node_api_core_get_output_raw"
path = "examples/client/node_api_core/10_get_output_raw.rs"

[[example]]
name = "node_api_core_get_output_metadata"
path = "examples/client/node_api_core/11_get_output_metadata.rs"

[[example]]
name = "node_api_core_get_receipts"
path = "examples/client/node_api_core/12_get_receipts.rs"

[[example]]
name = "node_api_core_get_receipts_migrated_at"
path = "examples/client/node_api_core/13_get_receipts_migrated_at.rs"

[[example]]
name = "node_api_core_get_treasury"
path = "examples/client/node_api_core/14_get_treasury.rs"

[[example]]
name = "node_api_core_get_included_block"
path = "examples/client/node_api_core/15_get_included_block.rs"

[[example]]
name = "node_api_core_get_included_block_raw"
path = "examples/client/node_api_core/16_get_included_block_raw.rs"

[[example]]
name = "node_api_core_get_milestone_by_id"
path = "examples/client/node_api_core/17_get_milestone_by_id.rs"

[[example]]
name = "node_api_core_get_milestone_by_id_raw"
path = "examples/client/node_api_core/18_get_milestone_by_id_raw.rs"

[[example]]
name = "node_api_core_get_utxo_changes_by_id"
path = "examples/client/node_api_core/19_get_utxo_changes_by_id.rs"

[[example]]
name = "node_api_core_get_milestone_by_index"
path = "examples/client/node_api_core/20_get_milestone_by_index.rs"

[[example]]
name = "node_api_core_get_milestone_by_index_raw"
path = "examples/client/node_api_core/21_get_milestone_by_index_raw.rs"

[[example]]
name = "node_api_core_get_utxo_changes_by_index"
path = "examples/client/node_api_core/22_get_utxo_changes_by_index.rs"

# Node API indexer examples

[[example]]
name = "node_api_indexer_get_basic_outputs"
path = "examples/client/node_api_indexer/00_get_basic_outputs.rs"

[[example]]
name = "node_api_indexer_get_alias_output"
path = "examples/client/node_api_indexer/01_get_alias_output.rs"

[[example]]
name = "node_api_indexer_get_alias_outputs"
path = "examples/client/node_api_indexer/02_get_alias_outputs.rs"

[[example]]
name = "node_api_indexer_get_foundry_output"
path = "examples/client/node_api_indexer/03_get_foundry_output.rs"

[[example]]
name = "node_api_indexer_get_foundry_outputs"
path = "examples/client/node_api_indexer/04_get_foundry_outputs.rs"

[[example]]
name = "node_api_indexer_get_nft_output"
path = "examples/client/node_api_indexer/05_get_nft_output.rs"

[[example]]
name = "node_api_indexer_get_nft_outputs"
path = "examples/client/node_api_indexer/06_get_nft_outputs.rs"

[[example]]
name = "node_api_indexer_get_random_basic_outputs"
path = "examples/client/node_api_indexer/07_get_random_basic_outputs.rs"

#######

[[example]]
name = "generate_mnemonic"
path = "examples/client/00_generate_mnemonic.rs"

[[example]]
name = "generate_addresses"
path = "examples/client/01_generate_addresses.rs"

[[example]]
name = "07_mqtt"
path = "examples/client/07_mqtt.rs"
required-features = [ "mqtt" ]

[[example]]
name = "ledger_nano"
path = "examples/client/ledger_nano.rs"
required-features = [ "ledger_nano" ]

[[example]]
name = "ledger_nano_transaction"
path = "examples/client/ledger_nano_transaction.rs"
required-features = [ "ledger_nano" ]

[[example]]
name = "stronghold"
path = "examples/client/stronghold.rs"
required-features = [ "stronghold" ]

[[example]]
name = "0_address_generation"
path = "examples/client/offline_signing/0_address_generation.rs"

[[example]]
name = "1_transaction_preparation"
path = "examples/client/offline_signing/1_transaction_preparation.rs"

[[example]]
name = "2_transaction_signing"
path = "examples/client/offline_signing/2_transaction_signing.rs"

[[example]]
name = "3_send_block"
path = "examples/client/offline_signing/3_send_block.rs"

[[example]]
name = "all"
path = "examples/client/output/all.rs"

[[example]]
name = "all_automatic_input_selection"
path = "examples/client/output/all_automatic_input_selection.rs"

[[example]]
name = "alias"
path = "examples/client/output/alias.rs"

[[example]]
name = "build_alias_output"
path = "examples/client/output/build_alias_output.rs"

[[example]]
name = "recursive_alias"
path = "examples/client/output/recursive_alias.rs"

[[example]]
name = "basic"
path = "examples/client/output/basic.rs"

[[example]]
name = "build_basic_output"
path = "examples/client/output/build_basic_output.rs"

[[example]]
name = "expiration"
path = "examples/client/output/expiration.rs"

[[example]]
name = "foundry"
path = "examples/client/output/foundry.rs"

[[example]]
name = "micro_transaction"
path = "examples/client/output/micro_transaction.rs"

[[example]]
name = "native_tokens"
path = "examples/client/output/native_tokens.rs"

[[example]]
name = "nft"
path = "examples/client/output/nft.rs"

[[example]]
name = "participation"
path = "examples/client/participation.rs"
required-features = [ "participation" ]

### Wallet

[[example]]
name = "mint_issuer_nft"
path = "examples/wallet/nft_collection/00_mint_issuer_nft.rs"
required-features = [ "storage", "stronghold" ]

[[example]]
name = "mint_collection_nft"
path = "examples/wallet/nft_collection/01_mint_collection_nft.rs"
required-features = [ "stronghold" ]

[[example]]
name = "0_generate_addresses"
path = "examples/wallet/offline_signing/0_generate_addresses.rs"
required-features = [ "storage", "stronghold" ]

[[example]]
name = "1_prepare_transaction"
path = "examples/wallet/offline_signing/1_prepare_transaction.rs"
required-features = [ "storage" ]

[[example]]
name = "2_sign_transaction"
path = "examples/wallet/offline_signing/2_sign_transaction.rs"
required-features = [ "stronghold" ]

[[example]]
name = "3_send_transaction"
path = "examples/wallet/offline_signing/3_send_transaction.rs"
required-features = [ "storage" ]

[[example]]
name = "create_wallet"
path = "examples/wallet/01_create_wallet.rs"
required-features = [ "storage", "stronghold" ]

[[example]]
name = "generate_address"
path = "examples/wallet/02_generate_address.rs"
required-features = [ "stronghold" ]

[[example]]
name = "get_funds"
path = "examples/wallet/03_get_funds.rs"

[[example]]
name = "get_balance"
path = "examples/wallet/04_get_balance.rs"

[[example]]
name = "wallet_transaction"
path = "examples/wallet/05_transaction.rs"
required-features = [ "stronghold" ]

[[example]]
name = "send_micro_transaction"
path = "examples/wallet/06_send_micro_transaction.rs"
required-features = [ "stronghold" ]

[[example]]
name = "send_native_tokens"
path = "examples/wallet/07_send_native_tokens.rs"
required-features = [ "stronghold" ]

[[example]]
name = "send_nft"
path = "examples/wallet/08_send_nft.rs"
required-features = [ "stronghold" ]

[[example]]
name = "mint_native_token"
path = "examples/wallet/09_mint_native_token.rs"
required-features = [ "stronghold" ]

[[example]]
name = "mint_nft"
path = "examples/wallet/10_mint_nft.rs"
required-features = [ "stronghold" ]

[[example]]
name = "decrease_native_token_supply"
path = "examples/wallet/11_decrease_native_token_supply.rs"
required-features = [ "stronghold" ]

[[example]]
name = "increase_native_token_supply"
path = "examples/wallet/12_increase_native_token_supply.rs"
required-features = [ "stronghold" ]

[[example]]
name = "burn_native_token"
path = "examples/wallet/13_burn_native_token.rs"
required-features = [ "stronghold" ]

[[example]]
name = "burn_nft"
path = "examples/wallet/14_burn_nft.rs"
required-features = [ "stronghold" ]

[[example]]
name = "destroy_foundry"
path = "examples/wallet/15_destroy_foundry.rs"
required-features = [ "stronghold" ]

[[example]]
name = "destroy_alias"
path = "examples/wallet/16_destroy_alias.rs"
required-features = [ "stronghold" ]

[[example]]
name = "check_unlock_conditions"
path = "examples/wallet/17_check_unlock_conditions.rs"

[[example]]
name = "accounts"
path = "examples/wallet/accounts.rs"

[[example]]
name = "background_syncing"
path = "examples/wallet/background_syncing.rs"

[[example]]
name = "events"
path = "examples/wallet/events.rs"
required-features = [ "events" ]

[[example]]
name = "wallet_ledger_nano"
path = "examples/wallet/ledger_nano.rs"
required-features = [ "ledger_nano" ]

[[example]]
name = "wallet_participation"
path = "examples/wallet/participation.rs"
required-features = [ "participation" ]

[[example]]
name = "logger"
path = "examples/wallet/logger.rs"

[[example]]
name = "output_consolidation"
path = "examples/wallet/output_consolidation.rs"
required-features = [ "stronghold" ]

[[example]]
name = "ping"
path = "examples/wallet/ping.rs"
required-features = [ "storage" ]

[[example]]
name = "pong"
path = "examples/wallet/pong.rs"
required-features = [ "storage" ]

[[example]]
name = "recover_accounts"
path = "examples/wallet/recover_accounts.rs"

[[example]]
name = "split_funds"
path = "examples/wallet/split_funds.rs"

[[example]]
name = "storage"
path = "examples/wallet/storage.rs"
required-features = [ "storage" ]

[[example]]
name = "threads"
path = "examples/wallet/threads.rs"

[[example]]
name = "wallet"
path = "examples/wallet/wallet.rs"